--- a/product-service-dev.yml
+++ b/product-service-dev.yml
@@ -1,4 +1,4 @@
-유레카 클라이언트 설정   
+# 유레카 클라이언트 설정   
 eureka:
  instance:
    instance-id: product-microservice-instance  # eureka에 등록되는 id 값
@@ -7,8 +7,7 @@ eureka:
    fetch-registry: true  # 유레카에서 조회할지 여부
    service-url:
      defaultZone: http://localhost:8761/eureka # 서비스를 등록할 서버 주소를 지정
-
-외부   
+  
  # db 설정 
 spring:
  datasource:
